--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 .work-sans-font {
   font-family: "Work Sans", sans-serif;
@@ -10,57 +9,156 @@
 /* colors */
 
 .primary-color {
-    background-color: rgba(255, 144, 14, 0.1);
+  background-color: rgba(255, 144, 14, 0.1);
 }
 
 .secondary-color {
-    background-color: #FFF4E7;
+  background-color: #fff4e7;
 }
 
 .dark-1 {
-   color: #131313; 
+  color: #131313;
 }
 
 .dark-2 {
-    color: #424242;
+  color: #424242;
 }
 
 .dark-3 {
-    color: #727272;
+  color: #727272;
 }
 
+.orange {
+    color: #ff900e;
+}
 
 /* shared-style */
 
-.display-flex {
-    display: flex;
+#B {
+    font-weight: bold;
 }
 
-.navbar, .banner {
-    max-width: 1440px;
-    margin: 0 auto;
+#M {
+    font-weight: 500;
+}
+
+.display-flex {
+  display: flex;
+}
+
+.navbar,
+.banner {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.btn-primary {
+  background-color: #ff900e;
+  color: white;
+  padding: 20px 25px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border-radius: 8px;
+  border: none;
+}
+
+main > section {
+    margin-top: 130px;
+}
+
+.section-title {
+    font-size: 2.8rem;
 }
 
 /* header style */
 
-
 /* nav-style */
 
 .navbar {
-    justify-content: space-between;
-    align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .brand {
-    font-size: 2.8rem;
+  font-size: 2.8rem;
 }
 
 .nav-item {
-    list-style: none;
-     margin-right: 30px;
+  list-style: none;
+  margin-right: 30px;
 }
 
 .nav-link {
-    text-decoration: none;
-    font-weight: 500;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+/* banner style */
+
+.banner-content {
+  max-width: 865px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.banner-content h1 {
+  font-weight: bold;
+  font-size: 4rem;
+}
+
+.banner-image {
+    width: 100%;
+}
+
+
+/* teams section */
+
+.teams {
+    justify-content: center;
+    align-items: center;
+}
+
+.team-image-container {
+    display: grid;
+    gap: 24px;
+    grid-template-columns: repeat(2,1fr);
+}
+
+.our-features {
+    margin-left: 130px;
+    max-width: 537px;
+}
+
+
+
+/* responsive design */
+
+@media screen and (max-width: 576px) {
+  .display-flex {
+    flex-direction: column;
+  }
+
+  .team-image-container {
+    grid-template-columns: repeat(1,1fr);
+}
+
+.our-features {
+    margin-left: 20px;
+}
+
+}
+
+/* responsive medium device */
+
+@media screen and (min-width:576px) and (max-width: 992px) {
+    .teams {
+        flex-direction: column;
+    }
+
+    .our-features {
+        margin-left: 50px auto;
+    }
+
+
 }
