--- a/style/style.css
+++ b/style/style.css
@@ -130,7 +130,57 @@ main > section {
     max-width: 537px;
 }
 
+/* soe facts style */
 
+
+.facts-container {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+}
+
+.fact-card {
+    border: 1px solid #ff900e;
+    width: 240px;
+    height: 250px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.fact-number {
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.fact-name {
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.fact-description {
+    max-width: 540px;
+}
+
+/* sponsor style */
+
+.sponsor-info {
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.sponsor-companies {
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+}
+
+.sponsor-companies img {
+    filter: grayscale(100%);
+}
 
 /* responsive design */
 
@@ -139,12 +189,24 @@ main > section {
     flex-direction: column;
   }
 
-  .team-image-container {
+  
+
+  .team-image-container, .facts-container, .sponsor-companies {
     grid-template-columns: repeat(1,1fr);
+}
+
+.facts-container {
+    justify-items: center;
+    gap: 24px;
 }
 
 .our-features {
     margin-left: 20px;
+}
+
+.sponsor-companies {
+    justify-items: center;
+    gap: 50px;
 }
 
 }
@@ -160,5 +222,9 @@ main > section {
         margin-left: 50px auto;
     }
 
-
+    .sponsor-companies, .facts-container {
+        grid-template-columns: repeat(2,1fr);
+        gap: 50px;
+        justify-items: center;
+    }
 }
